Finished navigation/sidebar layout for larger screens, reworked container and cookie prompt to avoid layout issues

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -18,7 +18,6 @@
 
 body,
 html {
-  --body-top-padding: 24px;
   -webkit-font-smoothing: antialiased;
   color: var(--sand12);
   font: var(--text-base);
